--- a/current/SFU/CsIArray/Fit/Energy/Makefile
+++ b/current/SFU/CsIArray/Fit/Energy/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo Making FitEVsECal.
-	(cd FitEVsECal r && make -is clean && make && make -is clean && cd ..)
+	(cd FitEVsECal && make -is clean && make && make -is clean && cd ..)
 	echo DONE: FitEVsECal.
-
+	
 	echo Making PIDVsECal.
-	(cd PIDVsECal r && make -is clean && make && make -is clean && cd ..)
+	(cd PIDVsECal && make -is clean && make && make -is clean && cd ..)
 	echo DONE: PIDVsECal.
 
 clean:
