--- a/current/SFU/CsIArray/Makefile
+++ b/current/SFU/CsIArray/Makefile
@@ -1,14 +1,14 @@
 all:
 	echo Making Energy.
-	(cd Energy r && make -is clean && make  && make -is clean && cd ..)
+	(cd Energy && make -is clean && make  && make -is clean && cd ..)
 	echo DONE: Energy.
-
+	
 	echo Making Time.
-	(cd Time r && make -is clean && make  && make -is clean && cd ..)
+	(cd Time && make -is clean && make  && make -is clean && cd ..)
 	echo DONE: Time.
-
+	
 	echo Making Fit.
-	(cd Fit r && make -is clean && make  && make -is clean && cd ..)
+	(cd Fit && make -is clean && make  && make -is clean && cd ..)
 	echo DONE: Fit.
 
 clean:
