--- a/current/SFU/Tigress/BGO/Energy/Makefile
+++ b/current/SFU/Tigress/BGO/Energy/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo Making BGO_ERaw.
-	(cd ERaw r && make -is clean && make && make -is clean && cd ..)
+	(cd ERaw && make -is clean && make && make -is clean && cd ..)
 	echo DONE: BGO_ERAW.
-
+	
 	echo Making BGO_ERawSum.
-	(cd ERawSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ERawSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: BGO_ERAWSUM.
 
 clean:
