--- a/current/SFU/Tigress/Energy/AddBackSupp/Makefile
+++ b/current/SFU/Tigress/Energy/AddBackSupp/Makefile
@@ -1,94 +1,94 @@
 all:
 	echo Making Tigress_ECalABSupp.
-	(cd ECalABSupp r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSupp && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSupp.
 	
 	echo Making Tigress_ECalABSuppSeg.
-	(cd ECalABSuppSeg r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSeg && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppSeg.
 	
 	echo Making Tigress_ECalABSuppRing.
-	(cd ECalABSuppRing r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRing && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRing.
 	
 	echo Making Tigress_ECalABSuppRingDopplerCorrected.
-	(cd ECalABSuppRingDopplerCorrected r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingDopplerCorrected && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingDopplerCorrected.
 	
 	#echo Making Tigress_ECalABSuppTester.
-	#(cd ECalABSuppTester r && make -is clean && make && make -is clean && cd ..)
+	#(cd ECalABSuppTester && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSuppTester.
 	
 	echo Making Tigress_ECalABSuppSum.
-	(cd ECalABSuppSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppSum.
 	
 	echo Making Tigress_ECalABSuppRingSum.
-	(cd ECalABSuppRingSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingSum.
 	
 	echo Making Tigress_ECalABSuppRing_2SuppGammas.
-	(cd ECalABSuppRing_2SuppGammas r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRing_2SuppGammas && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRing_2SuppGammas.
 	
 	echo Making Tigress_ECalABSuppRingSumRingDopplerCorrected.
-	(cd ECalABSuppRingSumRingDopplerCorrected r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSumRingDopplerCorrected && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingSumRingDopplerCorrected.
 	
 	echo Making Tigress_ECalABSuppRingSumRingDopplerCorrectedEGated.
-	(cd ECalABSuppRingSumRingDopplerCorrectedEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSumRingDopplerCorrectedEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingSumRingDopplerCorrectedEGated.
 	
 	echo Making Tigress_ECalABSuppRingEGated.
-	(cd ECalABSuppRingEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingEGated.
 		
 	echo Making Tigress_ECalABSuppRingSumEGatedFold.
-	(cd ECalABSuppRingSumEGatedFold r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSumEGatedFold && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingSumEGatedFold.
 	
 	echo Making Tigress_ECalABSuppRingSumEGatedByRing.
-	(cd ECalABSuppRingSumEGatedByRing r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSumEGatedByRing && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppRingSumEGatedByRing.
 	
 	echo Making Tigress_ECalABSuppSumEGated.
-	(cd ECalABSuppSumEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSumEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppSumEGated.
 	
 	echo Making Tigress_ECalABSuppSumEMultiGated.
-	(cd ECalABSuppSumEMultiGated r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSumEMultiGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalABSuppSumEMultiGated.
 	
 	#echo Making Tigress_ECalABSuppLayerSum.
-	#(cd ECalABSuppLayerSum r && make -is clean && make && make -is clean && cd ..)
+	#(cd ECalABSuppLayerSum && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSuppLayerSum.
 	
 	#echo Making Tigress_ECalABSuppLayer.
-	#(cd ECalABSuppLayer r && make -is clean && make && make -is clean && cd ..)
+	#(cd ECalABSuppLayer && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSuppLayer.
 	
 	#echo Making Tigress_ABSuppPosFoldHP.
-	#(cd SuppPosFoldHP r && make -is clean && make && make -is clean && cd ..)
+	#(cd SuppPosFoldHP && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ABSuppPosFoldHP.
 	
 	#echo Making Tigress_ECalABSupp_OnBGOE.
-	#(cd SuppOnBGOELimits r && make -is clean && make && make -is clean && cd ..)
+	#(cd SuppOnBGOELimits && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSupp_OnBGOE.
 	
 	#echo Making Tigress_ECalABSupp_OnBGOT.
-	#(cd SuppOnBGOTLimits r && make -is clean && make && make -is clean && cd ..)
+	#(cd SuppOnBGOTLimits && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSupp_OnBGOT.
 	
 	echo Making Tigress_EECalABSuppSum.
-	(cd EECalABSuppSum r && make -is clean && make && make -is clean && cd ..)
+	(cd EECalABSuppSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_EECalABSuppSum.
 	
 	echo Making Tigress_EECalABSuppSumRingDopplerCorrected.
-	(cd EECalABSuppSumRingDopplerCorrected r && make -is clean && make && make -is clean && cd ..)
+	(cd EECalABSuppSumRingDopplerCorrected && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_EECalABSuppSumRingDopplerCorrected.
 	
 	#echo Making Tigress_ECalABSupp_OnBGOPresence.
-	#(cd SuppOnBGOPresence r && make -is clean && make && make -is clean && cd ..)
+	#(cd SuppOnBGOPresence && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Tigress_ECalABSupp_OnBGOPresence.
 
 clean:
