--- a/current/SFU/Tigress/TimeAndEnergy/Makefile
+++ b/current/SFU/Tigress/TimeAndEnergy/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo making Tigress_TECal.
-	(cd TECal r && make -is clean && make && make -is clean && cd ..)
+	(cd TECal && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_TECal.
-
+	
 	echo making Tigress_ECalTFitRaw.
-	(cd ECalTFitRaw r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalTFitRaw && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Tigress_ECalTFitRaw.
 
 clean:
