--- a/current/SFU/TigressCsIArray/Energy/Makefile
+++ b/current/SFU/TigressCsIArray/Energy/Makefile
@@ -1,202 +1,202 @@
 all:
 	echo Making AngleBetweenHits_EGated.
-	(cd AngleBetweenHits_EGated r && make -is clean && make && make -is clean && cd ..)
+	(cd AngleBetweenHits_EGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: AngleBetweenHits_EGated.
 	
 	echo Making ECalAB_CsIPIDtr.
-	(cd ECalAB_CsIPIDtr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalAB_CsIPIDtr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALAB_CSIPIDTR.
 	
 	echo Making ECalAB_CsIPIDr.
-	(cd ECalAB_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalAB_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALAB_CSIPIDR.
 	
 	echo Making ECalABSum_CsIPIDr.
-	(cd ECalABSum_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSum_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUM_CSIPIDR.
 	
 	echo Making ECalABSuppSum_CsIPIDr.
-	(cd ECalABSuppSum_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSum_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPSUM_CSIPIDR.
 	
 	echo Making ECalABRingSum_CsIPIDr.
-	(cd ECalABRingSum_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABRingSum_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABRINGSUM_CSIPIDR.
 	
 	echo Making ECalABSuppRingSum_CsIPIDr.
-	(cd ECalABSuppRingSum_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSum_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPRINGSUM_CSIPIDR.
 	
 	echo Making ECalABSum_CsIEGate_CsIPIDr.
-	(cd ECalABSum_CsIEGate_CsIPIDr r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSum_CsIEGate_CsIPIDr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUM_CSIEGATE_CSIPIDR.
 	
 	echo Making ECalABSuppRingSum_deltaUcut.
-	(cd ECalABSuppRingSum_deltaUcut r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppRingSum_deltaUcut && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPRINGSUM_DELTAUCUT.
 	
 	echo Making ECalABSuppCsIRingSum.
-	(cd ECalABSuppCsIRingSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppCsIRingSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPCSIRINGSUM.
 	
 	echo Making ECalABSuppCsIRing.
-	(cd ECalABSuppCsIRing r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppCsIRing && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPCSIRING.
 	
 	echo Making ECalABSuppDSSum.
-	(cd ECalABSuppDSSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppDSSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPDSSUM.
 	
 	echo Making ECalABSuppDSSumEGated.
-	(cd ECalABSuppDSSumEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppDSSumEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPDSSUMEGATED.
 	
 	echo Making ECalABSuppSumTree.
-	(cd ECalABSuppSumTree r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSumTree && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABSUPPSUMTREE.
 	
 	echo Making deltaU_ECalCut.
-	(cd deltaU_ECalCut r && make -is clean && make && make -is clean && cd ..)
+	(cd deltaU_ECalCut && make -is clean && make && make -is clean && cd ..)
 	echo DONE: DELTAU_ECALCUT.
 	
 	echo Making ECalABRing_CsIEGate.
-	(cd  ECalABRing_CsIEGate r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABRing_CsIEGate && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABRING_CSIEGATE.
 	
 	echo Making ECalABRingSum_CsIEGate.
-	(cd  ECalABRingSum_CsIEGate r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABRingSum_CsIEGate && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECALABRINGSUM_CSIEGATE.
 	
 	echo Making CsIECalSum_TigEGate.
-	(cd  CsIECalSum_TigEGate r && make -is clean && make && make -is clean && cd ..)
+	(cd  CsIECalSum_TigEGate && make -is clean && make && make -is clean && cd ..)
 	echo DONE: CSIECALSUM_TIGEGATE.
 	
 	echo Making CsIECal_TigEGate.
-	(cd  CsIECal_TigEGate r && make -is clean && make && make -is clean && cd ..)
+	(cd  CsIECal_TigEGate && make -is clean && make && make -is clean && cd ..)
 	echo DONE: CSIECAL_TIGEGATE.
 	
 	echo Making EE_Plunger.
-	(cd  EE_Plunger r && make -is clean && make && make -is clean && cd ..)
+	(cd  EE_Plunger && make -is clean && make && make -is clean && cd ..)
 	echo DONE: EE_PLUNGER.
 	
 	echo Making EE_PlungerSum.
-	(cd  EE_PlungerSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  EE_PlungerSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: EE_PLUNGERSUM.
 	
 	echo Making EECal.
-	(cd  EECal r && make -is clean && make && make -is clean && cd ..)
+	(cd  EECal && make -is clean && make && make -is clean && cd ..)
 	echo DONE: EECAL.
 	
 	echo Making ECosThetaCalABSuppSum.
-	(cd  ECosThetaCalABSuppSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum.
 	
 	echo Making ECosThetaCalABSuppSum_LineCut.
-	(cd  ECosThetaCalABSuppSum_LineCut r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum_LineCut && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum_LineCut.
 	
 	echo Making ECosThetaCalABSuppSum_LineCutThreshold.
-	(cd  ECosThetaCalABSuppSum_LineCutThreshold r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum_LineCutThreshold && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum_LineCutThreshold.
 	
 	echo Making ECosThetaCalABSuppSum_Rotated.
-	(cd  ECosThetaCalABSuppSum_Rotated r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum_Rotated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum_Rotated.
 	
 	echo Making ECosThetaCalABSuppSum_RotatedCosThetaGate.
-	(cd  ECosThetaCalABSuppSum_RotatedCosThetaGate r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum_RotatedCosThetaGate && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum_RotatedCosThetaGate.
 	
 	echo Making ECalABSuppDSReconstructed.
-	(cd  ECalABSuppDSReconstructed r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructed && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructed.
 	
 	echo Making ECalABSuppDSReconstructedSum.
-	(cd  ECalABSuppDSReconstructedSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructedSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructedSum.
 	
 	echo Making ECalABSuppDSReconstructedSumEGated.
-	(cd  ECalABSuppDSReconstructedSumEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructedSumEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructedSumEGated.
 	
 	echo Making ECalABSuppDSReconstructedSumEGatedPID.
-	(cd  ECalABSuppDSReconstructedSumEGatedPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructedSumEGatedPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructedSumEGatedPID.
 	
 	echo Making ECalABSuppDSReconstructedSumEMultiGatedPID.
-	(cd  ECalABSuppDSReconstructedSumEMultiGatedPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructedSumEMultiGatedPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructedSumEMultiGatedPID.
 	
 	echo Making ECalABSuppSumDSEGated.
-	(cd  ECalABSuppSumDSEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSumDSEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSumDSEGated.
 	
 	echo Making ECalABSuppSumDSEGatedPID.
-	(cd  ECalABSuppSumDSEGatedPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSumDSEGatedPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSumDSEGatedPID.
 	
 	echo Making ECalABSuppSumDSEGated_Group.
-	(cd  ECalABSuppSumDSEGated_Group r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSumDSEGated_Group && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSumDSEGated_Group.
 	
 	echo Making ECalABSuppSumDSEGated_GroupPID.
-	(cd  ECalABSuppSumDSEGated_GroupPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSumDSEGated_GroupPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSumDSEGated_GroupPID.
 	
 	echo Making DSECalABSuppSumEGated.
-	(cd  DSECalABSuppSumEGated r && make -is clean && make && make -is clean && cd ..)
+	(cd  DSECalABSuppSumEGated && make -is clean && make && make -is clean && cd ..)
 	echo DONE: DSECalABSuppSumEGated.
 	
 	echo Making DSECalABSuppSumEGatedPID.
-	(cd  DSECalABSuppSumEGatedPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  DSECalABSuppSumEGatedPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: DSECalABSuppSumEGatedPID.
 	
 	echo Making ECalABSuppSegDSReconstructedSum.
-	(cd  ECalABSuppSegDSReconstructedSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSegDSReconstructedSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSegDSReconstructedSum.
 	
 	echo Making ECosThetaCalABSuppSum_Sheared.
-	(cd  ECosThetaCalABSuppSum_Sheared r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECosThetaCalABSuppSum_Sheared && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECosThetaCalABSuppSum_Sheared.
 	
 	echo Making EECalABSuppSumDSReconstructedSum.
-	(cd  EECalABSuppSumDSReconstructedSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  EECalABSuppSumDSReconstructedSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: EECalABSuppSumDSReconstructedSum.
 	
 	echo Making EECalABSuppSumDSReconstructedSumPID.
-	(cd  EECalABSuppSumDSReconstructedSumPID r && make -is clean && make && make -is clean && cd ..)
+	(cd  EECalABSuppSumDSReconstructedSumPID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: EECalABSuppSumDSReconstructedSumPID.
 	
 	echo Making FusEvap_ResE.
-	(cd  FusEvap_ResE r && make -is clean && make && make -is clean && cd ..)
+	(cd  FusEvap_ResE && make -is clean && make && make -is clean && cd ..)
 	echo DONE: FusEvap_ResE.
 	
 	echo Making ECalABGroup.
-	(cd  ECalABGroup r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABGroup && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABGroup.
 	
 	echo Making ECalABGroupSum.
-	(cd  ECalABGroupSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABGroupSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABGroupSum.
 	
 	echo Making ECalABSuppGroup.
-	(cd  ECalABSuppGroup r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppGroup && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppGroup.
 	
 	echo Making ECalABSuppGroupSum.
-	(cd  ECalABSuppGroupSum r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppGroupSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppGroupSum.
 	
 	echo Making ECalABSuppSumEGated_Group.
-	(cd  ECalABSuppSumEGated_Group r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppSumEGated_Group && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSumEGated_Group.
 	
 	echo Making ECalABSuppGroupSumEGatedByGroup.
-	(cd  ECalABSuppGroupSumEGatedByGroup r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppGroupSumEGatedByGroup && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppGroupSumEGatedByGroup.
 	
 	echo Making ECalABSuppDSReconstructedSumEGatedPIDSumCorr.
-	(cd  ECalABSuppDSReconstructedSumEGatedPIDSumCorr r && make -is clean && make && make -is clean && cd ..)
+	(cd  ECalABSuppDSReconstructedSumEGatedPIDSumCorr && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppDSReconstructedSumEGatedPIDSumCorr.
 
 
