--- a/current/SFU/TigressPINArray/Time/Makefile
+++ b/current/SFU/TigressPINArray/Time/Makefile
@@ -1,6 +1,6 @@
 all:
 	echo Making TTCalSum.
-	(cd TTCalSum r && make -is clean && make && make -is clean && cd ..)
+	(cd TTCalSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TIGRESS_PINArray_TTCalSum.
 
 clean:
