--- a/current/SFU/TigressRF/Makefile
+++ b/current/SFU/TigressRF/Makefile
@@ -1,6 +1,6 @@
 all:
 	echo Making ECalABSuppSum.
-	(cd ECalABSuppSum r && make -is clean && make && make -is clean && cd ..)
+	(cd ECalABSuppSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: ECalABSuppSum.
 
 clean:
