--- a/current/SFU/CsIArray/Fit/Makefile
+++ b/current/SFU/CsIArray/Fit/Makefile
@@ -1,14 +1,14 @@
 all:
 	echo Making PID.
-	(cd PID r && make -is clean && make && make -is clean && cd ..)
+	(cd PID && make -is clean && make && make -is clean && cd ..)
 	echo DONE: PID.
-
+	
 	echo Making GoodnessOfFit.
-	(cd GoodnessOfFit r && make -is clean && make && make -is clean && cd ..)
+	(cd GoodnessOfFit && make -is clean && make && make -is clean && cd ..)
 	echo DONE: GoodnessOfFit.
-
+	
 	echo Making Energy.
-	(cd Energy r && make -is clean && make && make -is clean && cd ..)
+	(cd Energy && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Energy.
 
 clean:
