--- a/current/SFU/Tigress/BGO/Makefile
+++ b/current/SFU/Tigress/BGO/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo Making Energy.
-	(cd Energy r && make -is clean && make && make -is clean && cd ..)
+	(cd Energy && make -is clean && make && make -is clean && cd ..)
 	echo DONE: BGO_ENERGY.
-
+	
 	echo Making Time.
-	(cd Time r && make -is clean && make && make -is clean && cd ..)
+	(cd Time && make -is clean && make && make -is clean && cd ..)
 	echo DONE: BGO_TIME.
 
 clean:
