--- a/current/SFU/TigressBGO/Makefile
+++ b/current/SFU/TigressBGO/Makefile
@@ -1,6 +1,6 @@
 all:
 	echo Making Time.
-	(cd Time r && make -is clean && make && make -is clean && cd ..)
+	(cd Time && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TIGRESSBGO_TIME.
 
 
