--- a/current/SFU/TigressCsIArray/Makefile
+++ b/current/SFU/TigressCsIArray/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo Making Time.
-	(cd Time r && make -is clean && make && make -is clean && cd ..)
+	(cd Time && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TIGRESSCSIARRAY_TIME.
-
+	
 	echo Making Energy.
-	(cd Energy r && make -is clean && make && make -is clean && cd ..)
+	(cd Energy && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TIGRESSCSIARRAY_Energy.
 
 clean:
