--- a/current/SFU/TigressCsIArray/Time/Makefile
+++ b/current/SFU/TigressCsIArray/Time/Makefile
@@ -1,22 +1,22 @@
 all:
 	echo making TigressCsIArray_TTCal.
-	(cd TTCal r && make -is clean && make && make -is clean && cd ..)
+	(cd TTCal && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TigressCsIArray_TTCal.
-
+	
 	echo making TigressCsIArray_TTCalFirstHit.
-	(cd TTCalFirstHit r && make -is clean && make && make -is clean && cd ..)
+	(cd TTCalFirstHit && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TigressCsIArray_TTCalFirstHit.
-
+	
 	echo making TigressCsIArray_TDiff.
-	(cd TDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TigressCsIArray_TDiff.
 
 clean:
 	(cd TTCal && make -is clean && cd ..)
 	rm -f *~
-
+	
 	(cd TTCalFirstHit && make -is clean && cd ..)
 	rm -f *~
-
+	
 	(cd TDiff && make -is clean && cd ..)
 	rm -f *~
