--- a/current/SFU/TigressPINArray/Tigress/Energy/Makefile
+++ b/current/SFU/TigressPINArray/Tigress/Energy/Makefile
@@ -1,6 +1,6 @@
 all:
 	echo Making Energy_AddBackSupp.
-	(cd AddBackSupp r && make -is clean && make && make -is clean && cd ..)
+	(cd AddBackSupp && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TIGRESS_PINARRAYELIM_ADDBACKSUPP.
 
 clean:
