--- a/current/SFU/separator/Makefile
+++ b/current/SFU/separator/Makefile
@@ -1,98 +1,98 @@
 all:
 	echo Making AngleBetweenHits.
-	(cd AngleBetweenHits r && make -is clean && make && make -is clean && cd ..)
+	(cd AngleBetweenHits && make -is clean && make && make -is clean && cd ..)
 	echo DONE: AngleBetweenHits.
 	
 	echo Making TrigBits.
-	(cd TrigBits r && make -is clean && make && make -is clean && cd ..)
+	(cd TrigBits && make -is clean && make && make -is clean && cd ..)
 	echo DONE: TrigBits.
 	
 	echo Making CsIPos.
-	(cd CsIPos r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIPos && make -is clean && make && make -is clean && cd ..)
 	echo DONE: CsIPos.
 	
 	echo Making CsIPosSum.
-	(cd CsIPosSum r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIPosSum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: CsIPosSum.
 	
 	echo Making Separator_TigressCsITTCalDiff.
-	(cd TigressCsITTCalDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressCsITTCalDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressCsITTCalDiff.
 	
 	echo Making Separator_TigressTTCalDiff.
-	(cd TigressTTCalDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressTTCalDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressTTCalDiff.
 	
 	echo Making Separator_TigressTTCalDiffFirstHit.
-	(cd TigressTTCalDiffFirstHit r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressTTCalDiffFirstHit && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressTTCalDiffFirstHit.
 	
 	echo Making Separator_TigressTTCalDiffCentralValue.
-	(cd TigressTTCalDiffCentralValue r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressTTCalDiffCentralValue && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressTTCalDiffCentralValue.
 	
 	echo Making Separator_TigressDropCore.
-	(cd TigressDropCore r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressDropCore && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressDropCore.
 	
 	echo Making Separator_CsITTCalDiff.
-	(cd CsITTCalDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd CsITTCalDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsITTCalDiff.
 	
 	echo Making Separator_CsITTCalDiffFirstHit.
-	(cd CsITTCalDiffFirstHit r && make -is clean && make && make -is clean && cd ..)
+	(cd CsITTCalDiffFirstHit && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsITTCalDiffFirstHit.
 	
 	echo Making Separator_CsITTCalDiffCentralValue.
-	(cd CsITTCalDiffCentralValue r && make -is clean && make && make -is clean && cd ..)
+	(cd CsITTCalDiffCentralValue && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsITTCalDiffCentralValue.
 	
 	echo Making Separator_TigressCsITTCalDiffSAFE.
-	(cd TigressCsITTCalDiffSAFE r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressCsITTCalDiffSAFE && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressCsITTCalDiffSAFE.
 	
 	echo Making Separator_TigressCsITTCalFirstHitDiff.
-	(cd TigressCsITTCalFirstHitDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressCsITTCalFirstHitDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressCsITTCalFirstHitDiff.
 	
 	echo Making Separator_TigressCsITTCalAnyHitDiff.
-	(cd TigressCsITTCalAnyHitDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressCsITTCalAnyHitDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressCsITTCalAnyHitDiff.
 	
 	echo Making Separator_TigressCsITTCalFirstHitDiffCentralValue.
-	(cd TigressCsITTCalFirstHitDiffCentralValue r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressCsITTCalFirstHitDiffCentralValue && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressCsITTCalFirstHitDiffCentralValue.
 	
 	#echo Making Separator_TigressCsITTCalDiff_firstEvent.
-	#(cd TigressCsITTCalDiff_firstEvent r && make -is clean && make && make -is clean && cd ..)
+	#(cd TigressCsITTCalDiff_firstEvent && make -is clean && make && make -is clean && cd ..)
 	#echo DONE: Separator_TigressCsITTCalDiff_firstEvent.
 	
 	echo Making Separator_CsIPIDER.
-	(cd CsIPIDER r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIPIDER && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsIPIDER.
 	
 	echo Making Separator_CsIPIDER_Sum.
-	(cd CsIPIDER_Sum r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIPIDER_Sum && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsIPIDER_Sum.
 	
 	echo Making Separator_CsIPID_threshold.
-	(cd CsIPID_threshold r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIPID_threshold && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsIPID_threshold.
 	
 	echo Making Separator_CsIDeltaU.
-	(cd CsIDeltaU r && make -is clean && make && make -is clean && cd ..)
+	(cd CsIDeltaU && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_CsIDeltaU.
 	
 	echo Making Separator_RF.
-	(cd RF r && make -is clean && make && make -is clean && cd ..)
+	(cd RF && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_RF.
 	
 	echo Making Separator_Fold.
-	(cd Fold r && make -is clean && make && make -is clean && cd ..)
+	(cd Fold && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_Fold.
 	
 	echo Making Separator_TigressPINTTCalDiff.
-	(cd TigressPINTTCalDiff r && make -is clean && make && make -is clean && cd ..)
+	(cd TigressPINTTCalDiff && make -is clean && make && make -is clean && cd ..)
 	echo DONE: Separator_TigressPINTTCalDiff.
 
 clean:
