--- a/current/midas/project/Makefile
+++ b/current/midas/project/Makefile
@@ -1,10 +1,10 @@
 all:
 	echo Making project_channel.
-	(cd channel r && make -is clean && make  && make -is clean && cd ..)
+	(cd channel && make -is clean && make  && make -is clean && cd ..)
 	echo DONE: PROJECT_CHANNEL.
-
+	
 	echo Making project_tig10.
-	(cd tig10 r && make -is clean && make  && make -is clean && cd ..)
+	(cd tig10 && make -is clean && make  && make -is clean && cd ..)
 	echo DONE: PROJECT_TIG10.
 
 clean:
